--- a/hw/project/project.Rmd
+++ b/hw/project/project.Rmd
@@ -152,14 +152,28 @@ This analysis focuses specifically on what the regular alcohol consumption acros
 
 The findings reveal that alcohol is one of the most commonly consumed substances among individuals aged 18-24. While other substances like caffeine and chocolate are also widely consumed, this analysis centers on alcohol due to its significant public health implications. Overall we found that alcohol consumption decreases significantly with increased age as the data is further analyzed.
 
-
 # Background
 
-In order to answer our question, we need to know how much alcohol is being consumed by each age group from age 18 to 65 and up. The age groups consist of 18-24, 24-35, 35-44, 45-54, 55-64 and 65+. Our data set consists of data from one source that had this information.
+In order to answer our question, we need to know how much alcohol is being consumed by each age group from age 18 to 65 and up. The age groups consist of six age groups:
+
+- 18-24
+
+- 24-35 
+
+- 35-44
+
+- 45-54 
+
+- 55-64
+
+- 65+
+
+Our data set consists of data from one source that had this information.
 
 ## Age and Drug Use Data (https://doi.org/10.24432/C5TC7S)
 
-Our data came from a Drug consumption dataset (Fehrman, Egan, and Mirkes 2015, https://doi.org/10.24432/C5TC7S). This dataset had information on many different demographics and their consumption of various drug types, some legal and some illegal. The raw data contains many columns and almost 2000 rows (individuals); however for this study we only used columns that corresponded to age group (Age) and alcohol consumption (Alcohol). 
+Our data came from a Drug consumption dataset (Fehrman, Egan, and Mirkes 2015, https://doi.org/10.24432/C5TC7S). This dataset had information on many different demographics and their consumption of various drug types, some legal and some illegal. The raw data contains 12 columns and 1885 rows (individuals); however for this study we only used columns that corresponded to age group (Age) and alcohol consumption (Alcohol).
+
 The Age column quantified the ages of all individuals so that each row or individual had a value across a broad range between -0.95 and 2.59,  that would put them in a certain age group. For example the value -0.95197 puts that individual into the age group 18-24 where 1.09449 puts them into 45-59. 
 The Alcohol column placed each individual into one of 7 classes based on the frequency of their consumption. The classes included:
 
@@ -169,7 +183,7 @@ The Alcohol column placed each individual into one of 7 classes based on the fre
 
 - CL2: used in the last decade
 
--  CL3: used in the last year
+- CL3: used in the last year
 
 - CL4: used in the last month
 
@@ -179,7 +193,7 @@ The Alcohol column placed each individual into one of 7 classes based on the fre
 
 ## Combined Data
 
-These data can be joined together in a separate table, grouping individuals by their respective age group, and then a statistical analysis can be conducted to see if alcohol consumption varies among age groups. 
+These columns or features can be joined together in a separate table, grouping individuals by their respective age group, and then a statistical analysis can be conducted to see if alcohol consumption varies among age groups. 
 
 ```{r echo=FALSE}
 # Saved list of age ranges for later use
@@ -535,8 +549,6 @@ drug_plots[[1]]
 > The results show a statistically significant negative association (p=0.0307), with alcohol consumption decreasing by approximately 3.94% for each increase in age group. The model explains about 66% (R^2) of the variance in alcohol consumption. The confidence interval ([-0.0729, -0.0060]) supports that alcohol consumption decreases as age group increases. 
 
 # Discussion
-
-The analysis above suggests that all age groups drink the same amount of alcohol, except for people who are 65 and older. 
 
 Multiple limitations due to the data were identified in our analysis. First, the sampled population had a few biases, namely education and racial ones. Over 90% of participants reported being white, and 59.5% of participants had at least a degree or professional certification. The data also reported the age of participants in ranges, as noted in the background section, as opposed to specific ages, and limited the data to people 18 and older, potentially hiding any trends for any age group more specific than the given ranges. 
 
